2010-03-22  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Multiselect Popup - adjusting QtAbstractWebPopup
        https://bugs.webkit.org/show_bug.cgi?id=36186

        QtAbstractWebPopup must provide new methods to be used by its descendants that
        wish to handle <select multiple> elements.

        * platform/qt/QtAbstractWebPopup.cpp:
        (WebCore::QtAbstractWebPopup::selectItem):
        (WebCore::QtAbstractWebPopup::multiple):
        * platform/qt/QtAbstractWebPopup.h:

2010-03-22  Alex Milowski  <alex@milowski.com>

        Reviewed by Kenneth Rohde Christiansen.

        Added basic support for mfrac (fractions)

        Test: mathml/presentation/fractions.xhtml

        * WebCore.xcodeproj/project.pbxproj:
        * mathml/MathMLInlineContainerElement.cpp:
        (WebCore::MathMLInlineContainerElement::createRenderer):
        * mathml/RenderMathMLFraction.cpp: Added.
        (WebCore::RenderMathMLFraction::RenderMathMLFraction):
        (WebCore::RenderMathMLFraction::updateFromElement):
        (WebCore::RenderMathMLFraction::addChild):
        * mathml/RenderMathMLFraction.h: Added.

2010-03-22  Kevin Decker  <kdecker@apple.com>

        Reviewed by John Sullivan.

        https://bugs.webkit.org/show_bug.cgi?id=36328

        * page/mac/WebCoreViewFactory.h: Added -missingPluginText method 
        * platform/LocalizedStrings.h: Added missingPluginText()
        * platform/gtk/LocalizedStringsGtk.cpp: Likewise.
        * platform/mac/LocalizedStringsMac.mm: Same here.
        * platform/qt/Localizations.cpp: Ditto.

2010-03-22  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Handle worker exceptions in V8MessageHandler like it's done in regular documents. This way all worker exceptions will be logged in the console not only those which happen in event listeners. 

        https://bugs.webkit.org/show_bug.cgi?id=31171
